Add components for displaying records, adding records and displaying stats

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "granify-trial",
   "version": "0.1.0",
+  "main": "server/index.js",
+  "proxy": "http://localhost:8040",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bootstrap": "^3.3.7",
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
+    "express": "^4.16.4",
     "massive": "^5.5.1",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
