--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "massive": "^5.5.1",
+    "node-sass": "^4.9.4",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
